# banki

./: .dockerignore  .gitignore  Makefile  README.md  db.txt  example.csv  pyproject.toml  setup.cfg
.github/workflows/: test.yml
alembic/: env.py
alembic/versions/: a38d3aae251a_adds_persons_and_debts_tables.py
banki/: configuration.py  main.py
banki/api/v1/: __init__.py  deps.py
banki/api/v1/endpoints/: debts.py  health.py
banki/api/v1/schemas/: __init__.py  base.py  debts.py  health.py
banki/entities/: __init__.py  debt.py  person.py
banki/gateways/db/: functions.py  session.py
banki/gateways/db/models/: __init__.py  base.py  debts.py  persons.py
banki/gateways/db/repos/: base_repo.py  debts.py  health.py
banki/gateways/email/: client.py
banki/use_cases/: errors.py
banki/use_cases/debts/: __init__.py  create_debts.py  errors.py  pay_debt.py
banki/use_cases/health/: __init__.py  health_check.py
banki/vo/: __init__.py  debts.py  page.py  persons.py
docker/local/: Dockerfile  docker-compose.yml  entrypoint.sh
docker/local_dev/: docker-compose.yml
docker/test/: docker-compose.yml
tests/test_api/: conftest.py
tests/test_api/test_v1/test_endpoints/test_debts/: test_create_api.py  test_create_with_file_api.py
tests/test_api/test_v1/test_endpoints/test_debts/data/: example.csv
tests/test_api/test_v1/test_endpoints/test_health/: test_health_check_api.py
tests/test_use_cases/test_debts/: test_create_debts.py  test_pay_debt.py
tests/test_use_cases/test_health/: test_health_check.py
