[tool.poetry]
name = "banki"
version = "0.1.0"
description = ""
authors = ["Pablo Aguilar <pablo.aguilar@outlook.com.br>"]

[tool.poetry.dependencies]
python = "^3.11"

## flake8
#wemake-python-styleguide = "^0.16.1"
#flake8-pytest-style = "^1.6.0"
fastapi = {extras = ["all"], version = "^0.95.2"}
sqlalchemy = {extras = ["mypy"], version = "^2.0.15"}
pydantic = "^1.10.8"
psycopg2-binary = "^2.9.6"
python-multipart = "^0.0.6"
returns = "^0.20.0"
humps = "^0.2.2"
fastapi-mail = "^1.2.8"

[tool.poetry.group.dev.dependencies]
# pytest
pytest = "^7.3.1"
pytest-cov = "^4.1.0"
pytest-randomly = "^3.12.0"

# lint
wemake-python-styleguide = "^0.18.0"

# mypy
mypy = "^1.3.0"

# misc
coverage = {extras = ["toml"], version = "^7.2.7"}
alembic = "^1.11.1"
isort = "^5.12.0"
mimesis = "^10.1.0"
safety = "^2.3.5"

[tool.pytest.ini_options]
minversion = "7.1"
addopts = "--cov banki --cov-report=html --cov-report=xml --cov-branch --cov-fail-under=60"
testpaths = ["tests"]
markers = [
    "integration: API Integration tests"
]

[tool.coverage.run]
branch = true

[tool.coverage.html]
title = "banki"

[tool.coverage.report]
exclude_lines = [
    "^if TYPE_CHECKING:",
]

[tool.isort]
profile = "wemake"
src_paths = ["banki", "tests"]
line_length = 100

[tool.mypy]
python_version = "3.11"

# suppress errors about unsatisfied imports
ignore_missing_imports = true

plugins = [
    "returns.contrib.mypy.returns_plugin",
    "pydantic.mypy",
#    "sqlalchemy.ext.mypy.plugin",
]
exclude = [".*conftest\\.py$"]

# be strict
warn_return_any = true
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true

disallow_untyped_defs = true
check_untyped_defs = true
disallow_untyped_calls = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
